<resources>
    <string name="app_name">LoyCards</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Nustatymai</string>
    <string name="my_cards">Mano kortelės</string>
    <string name="offers">Pasiūlymai</string>
    <string name="logout">Atsijungti</string>
    <string name="change_password">Keisti slaptažodį</string>
    <string name="user_actions">Naudotojo veiksmai</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Registration">Registracija</string>
    <string name="user_name">Naudotojo vardas</string>
    <string name="email">Elektroninis paštas</string>
    <string name="password">Slaptažodis</string>
    <string name="retype_passord">Pakartoti slaptažodį</string>
    <string name="register">Registruoti</string>
    <string name="login">Prisijungti</string>
    <string name="server_client_id">969275403900-ih4cisjtb4kkg2acp2nfip1fdidvup2k.apps.googleusercontent.com</string>
    <string name="add_new_card">Pridėti naują kortelę</string>
    <string name="birth_date">Gimimo data</string>
    <string name="card_number">Kortelės numeris</string>
    <string name="activate_card">Aktyvuoti kortelę</string>
    <string name="mandatory_field">Laukas privalomas</string>
    <string name="password_missmatch">Slaptažodžiai nesutampa</string>
    <string name="send_notifications">Leisti siųsti priminimus</string>
    <string name="turn_on_nfc">Įjungti NFC paleidus aplikaciją</string>
    <string name="rate_app">Įvertinti aplikaciją</string>
    <string name="save">Išsaugoti</string>
    <string name="about">Apie</string>
    <string name="about_text">Aplikacija sukurta\nVilniaus universiteto\nMatematikos ir informatikos fakulteto\nProgramų sistemų baigiamajam bakalauro darbui</string>
    <string name="author">Autorius: Audrius Bartkus</string>
    <string name="about_app">Apie aplikaciją:</string>
    <string name="about_app_text">Aplikacija skirta lojalumo kortelių registravimui ir naudojimui atsiskaitant prekybos vietose. Aplikacijoje naudojami testavimui skirti duomenys, nesurišti su realiais parduotuvių tinklais.</string>
    <string name="version">Versija: 1.4</string>
    <string name="service_name">CardEmulation</string>
    <string name="card_title">Sample Loyalty Card</string>
    <string name="maxima_card">Maxima lojalumo kortelė</string>
    <string name="iki_card">IKI lojalumo kortelė</string>
    <string name="card_data">Kortelės duomenys</string>
</resources>
